[package]
name = "sharesight"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = {"version" = "1.0.133", features = ["derive"]}
serde_json = "1.0.59"
chrono = "0.4.19"